force-app/main/default/objects/HP_Case_Action__mdt/HP_Case_Action__mdt.object-meta.xml
<CustomObject>
    <description>Metadata pour gérer les HP Case Actions</description>
    <label>HP Case Action</label>
    <pluralLabel>HP Case Actions</pluralLabel>
</CustomObject>