force-app/main/default/objects/HP_Case_Action__mdt/fields/HP_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>HP_Button_Label__c</fullName>
    <description>HP_Button_Label</description>
    <inlineHelpText>HP_Button_Label</inlineHelpText>
    <label>Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>