force-app/main/default/objects/HP_Case_Action__mdt/fields/HP_Has_Paramater__c.field-meta.xml
<CustomField>
    <fullName>HP_Has_Paramater__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Paramater</label>
    <type>Checkbox</type>
</CustomField>