force-app/main/default/objects/HP_Case_Action__mdt/fields/HP_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>HP_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HP_Is_Active</description>
    <inlineHelpText>HP_Is_Active</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>