force-app/main/default/objects/HP_Case_Action__mdt/fields/HP_LWC_Name__c.field-meta.xml
<CustomField>
    <fullName>HP_LWC_Name__c</fullName>
    <description>HP_LWC_Name</description>
    <inlineHelpText>HP_LWC_Name</inlineHelpText>
    <label>LWC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>