force-app/main/default/objects/HP_Case_Action__mdt/fields/HP_Order__c.field-meta.xml
<CustomField>
    <fullName>HP_Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>