force-app/main/default/objects/HP_Case_Action__mdt/fields/HP_Paramater__c.field-meta.xml
<CustomField>
    <fullName>HP_Paramater__c</fullName>
    <label>Paramater</label>
    <length>255</length>
    <type>Text</type>
</CustomField>