force-app/main/default/objects/HP_Case_Action__mdt/fields/HP_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>HP_Record_Type__c</fullName>
    <description>HP_Record_Type</description>
    <inlineHelpText>HP_Record_Type</inlineHelpText>
    <label>Record Type</label>
    <type>TextArea</type>
</CustomField>