force-app/main/default/objects/HP_Case_Action__mdt/fields/HP_Type__c.field-meta.xml
<CustomField>
    <fullName>HP_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LWC</fullName>
                <default>true</default>
                <label>LWC</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>